boulder/boulder/tests/compile_fail/hir/function_call/arg_empty.bo
# 2 parameters 
# received 0
# (7:
# (10:
# ^^^^^^^^

fn callee(a: u32, b: u32) { }

fn caller(a: u32) {
    callee()
}